[package]
name = "ssvm_nodejs_starter"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[package.metadata.ssvmup.profile.release]
wasm-opt = false

[lib]
name = "lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "=0.2.61"
ssvm-wasi-helper = "=0.1.0"
image = { version = "0.23.8", default-features = false, features = ["jpeg"] }
rustdct = "0.4.0"
